...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                />

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/itemImage"
                app:layout_constraintStart_toEndOf="@id/itemImage"
                android:layout_marginStart="20dp"
                android:fontFamily="casual"
...
